--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -2,6 +2,7 @@
 <header>
     {% load staticfiles %}
 	<link href="{% static "bootstrap-3.1.1-dist/css/bootstrap.css" %}" rel="stylesheet" />
+    <script src="{% static "jquery/jquery-2.0.2.min.js" %}"></script>
     
     <style>
 		.container{
@@ -18,6 +19,8 @@
 			margin: 0 auto;
 		}
 	</style>
+    
+
 </header>
 <body>
 
@@ -60,15 +63,16 @@
 <div class="container">
 	<div class="im-centered"><div class="row">
 
-        <div class="col-sm-4">
-		    <h3>Join The Alpha!</h3>
+        <div class="col-sm-6">
+		    <h3>Join The Alpha Release!</h3>
         </div>
     </div></div>
     <div class="im-centered"><div class="row">
         <form class="form" role="form">
         	<div class="col-sm-4">
-				<input type="email" class="form-control" id = "inputEmail" placeholder="joe.doe@email.com" />
+				<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
             </div>
+            <button type="button" id="button" class="btn btn-info">Submit</button>
         </form>
 	</div></div>   
 </div>
@@ -76,3 +80,18 @@
    <!-- Main component for a primary marketing message or call to action -->
       
 </body>
+
+
+<script>
+	$("#button").click(function(){ 
+								
+								
+									var email = $("#inputEmail").val();
+									
+									console.log(email);
+									var a = $.get( "/signup/", function(){}); 
+									console.log(a);
+								
+								});	
+
+</script>
