camel cased bug report

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -86,12 +86,14 @@
 	$("#button").click(function(){ 
 								
 								
-									var email = $("#inputEmail").val();
-									
-									console.log(email);
-									var a = $.get( "/signup/", function(){}); 
-									console.log(a);
-								
-								});	
+			var email = $("#inputEmail").val();
+			
+			console.log(email);
+			var a = $.get( "/signup/?email="+email, function(data){
+												//console.log(data);
+												}); 
+			console.log(a);
+		
+		});	
 
 </script>
