--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -1,23 +1,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <!--  
     <item
-        android:id="@+id/action_fb_share"
-        android:title="@string/action_fb_share"
-        android:icon="@drawable/btn_fb_share"
+        android:id="@+id/action_report_bug"
+        android:title="@string/action_report_bug"
+        android:icon="@drawable/btn_report_bug"
         android:showAsAction="always"
         android:orderInCategory="1" />
-    -->
     
     <item
         android:id="@+id/action_log_out"
         android:title="@string/action_log_out"
-        android:orderInCategory="1" />
+        android:orderInCategory="2" />
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="2"
-        android:showAsAction="never"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings"
+        android:showAsAction="never" 
+        android:orderInCategory="3" />
     
 </menu>
