--- a/android/res/layout/popwin_report_bug.xml
+++ b/android/res/layout/popwin_report_bug.xml
@@ -5,30 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@drawable/popwin_comment_bg" >
-    
-    <LinearLayout
-        android:layout_width="wrap_content"
+    android:background="@drawable/popwin_report_bug_bg" >
+
+    <TextView
+        android:layout_width="match_parent"
     	android:layout_height="wrap_content"
+    	android:gravity="center"
     	android:layout_marginBottom="6dp"
-    	android:layout_gravity="center"
-    	android:orientation="horizontal" >
-        
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginRight="6dp"
-            android:src="@drawable/btn_report_bug" />
-        
-        <TextView
-	        android:layout_width="match_parent"
-	    	android:layout_height="wrap_content"
-	    	android:gravity="center_vertical"
-	    	android:textSize="18sp"
-	    	android:textColor="#fff"
-	    	android:text="@string/report_bug" />
-        
-    </LinearLayout>
+    	android:textSize="18sp"
+    	android:textColor="#000"
+    	android:text="@string/report_bug" />
     
     <EditText 
         android:id="@+id/report_bug"
