--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -5,28 +5,17 @@
     android:layout_height="match_parent"
     android:background="#fff" >
     
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/derpteam_logo"
-        android:contentDescription="@string/logo" />
-    
     <FrameLayout
         android:id="@+id/picture_frame"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/logo"
         android:layout_centerHorizontal="true" >
         
         <ImageView 
 	        android:id="@+id/rate_picture"
-	        android:layout_width="320dp"
-	        android:layout_height="320dp"
+	        android:layout_width="match_parent"
+	        android:layout_height="360dp"
 	        android:scaleType="fitXY"
 	        android:contentDescription="@string/desc_rate_image" />
         
@@ -86,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:padding="10dp"
         android:orientation="horizontal" >
         
