--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -56,7 +56,9 @@
 <div class="container">
 	<div class="im-centered">
 		<div class="row">
-        	<div class="col-sm-6 col-centered"><h3>Join The Alpha Release!</h3></div>
+			<div class="col-sm-3"></div>
+        	<div class="col-sm-6"><h3>Join The Alpha Release!</h3></div>
+        	<div class="col-sm-3"></div>
     	</div>
 	</div>
     <div class="im-centered"><div class="row">
