--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -61,14 +61,19 @@
         	<div class="col-sm-3"></div>
     	</div>
 	</div>
-    <div class="im-centered"><div class="row">
-        <form class="form" role="form">
+
+    <div class="im-centered">
+    	<div class="row">
+    		<div class="col-sm-4"></div>
         	<div class="col-sm-4">
-				<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
-            </div>
-            <button type="button" id="button" class="btn btn-info">Submit</button>
-        </form>
-	</div></div>   
+        		<form class="form" role="form">
+        		<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
+        		<button type="button" id="button" class="btn btn-info">Submit</button>
+        		</form>
+        	</div>
+            <div class="col-sm-4"></div>        
+		</div>
+	</div>   
 </div>
 
    <!-- Main component for a primary marketing message or call to action -->
