made input box smaller

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -65,15 +65,16 @@
     <div class="im-centered">
     	<div class="row">
     		<div class="col-sm-3"></div>
-        	<div class="col-sm-6">
+        	<div class="col-sm-4">
         		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
-        		<button type="button" id="button" class="btn btn-info">Submit</button>
-        		</form>
         	</div>
+        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-3"></div>        
 		</div>
 	</div>   
+
+	<br />
 </div>
 
    <!-- Main component for a primary marketing message or call to action -->
