--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -57,20 +57,20 @@
 	<div class="im-centered">
 		<div class="row">
 			<div class="col-sm-3"></div>
-        	<div class="col-sm-6"><h3>Join The Alpha Release!</h3></div>
+        	<div class="col-sm-6 text-center"><h3>Join The Alpha Release!</h3></div>
         	<div class="col-sm-3"></div>
     	</div>
 	</div>
 
     <div class="im-centered">
     	<div class="row">
-    		<div class="col-sm-3"></div>
-        	<div class="col-sm-4">
+    		<div class="col-sm-2"></div>
+        	<div class="col-sm-5">
         		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
         	</div>
-        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
-            <div class="col-sm-3"></div>        
+        	<div class="col-sm-3"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
+            <div class="col-sm-2"></div>        
 		</div>
 	</div>   
 
