--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -69,7 +69,8 @@
         		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
         	</div>
-        	<div class="col-sm-3"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
+        	<div class="col-sm-1"></div>     
+        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
