--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -67,14 +67,14 @@
     		<div class="col-sm-2"></div>
         	<div class="col-sm-6">
         		<form class="form" role="form">
-        		<input type="email" class="form-control" id="inputEmail" placeholder="joe.doe@email.com" />
+        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
         	</div>
         	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
 
-	<br />
+	<br /><br />
 </div>
 
    <!-- Main component for a primary marketing message or call to action -->
