--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -14,6 +14,10 @@
 			margin: auto; 
 			max-width: 600px;
 		}
+
+		#signup-bg {
+			background-color:#cccccc;
+		}
 	</style>
     
 
@@ -65,11 +69,13 @@
     <div class="im-centered">
     	<div class="row">
     		<div class="col-sm-2"></div>
-        	<div class="col-sm-6">
-        		<form class="form" role="form">
-        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
+    		<div id="signup-bg">
+	        	<div class="col-sm-6">
+	        		<form class="form" role="form">
+	        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
+	        	</div>
+	        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
         	</div>
-        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
