trying bg color of signup area

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -16,7 +16,7 @@
 		}
 
 		#signup-bg {
-			background-color:#cccccc;
+			background:#cccccc;
 		}
 	</style>
     
@@ -69,13 +69,13 @@
     <div class="im-centered">
     	<div class="row">
     		<div class="col-sm-2"></div>
-    		<div id="signup-bg">
+    		<section id="signup-bg">
 	        	<div class="col-sm-6">
 	        		<form class="form" role="form">
 	        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
 	        	</div>
 	        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
-        	</div>
+        	</section>
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
