hoping fixed gray bg

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -15,7 +15,7 @@
 			max-width: 600px;
 		}
 
-		#signup-bg {
+		.signup-bg {
 			background:#cccccc;
 		}
 	</style>
@@ -69,13 +69,11 @@
     <div class="im-centered">
     	<div class="row">
     		<div class="col-sm-2"></div>
-    		<section id="signup-bg">
-	        	<div class="col-sm-6">
-	        		<form class="form" role="form">
-	        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
-	        	</div>
-	        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
-        	</section>
+        	<div class="col-sm-6 signup-bg">
+        		<form class="form" role="form">
+        		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
+        	</div>
+        	<div class="col-sm-2 signup-bg"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
