changed class bg gray to row

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -67,13 +67,13 @@
 	</div>
 
     <div class="im-centered">
-    	<div class="row">
+    	<div class="row signup-bg">
     		<div class="col-sm-2"></div>
-        	<div class="col-sm-6 signup-bg">
+        	<div class="col-sm-6">
         		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
         	</div>
-        	<div class="col-sm-2 signup-bg"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
+        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
             <div class="col-sm-2"></div>        
 		</div>
 	</div>   
