--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -68,13 +68,11 @@
 
     <div class="im-centered">
     	<div class="row signup-bg">
-    		<div class="col-sm-2"></div>
-        	<div class="col-sm-6">
+        	<div class="col-sm-6 col-sm-offset-2">
         		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
         	</div>
-        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>   
-            <div class="col-sm-2"></div>        
+        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>          
 		</div>
 	</div>   
 
