--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -67,12 +67,13 @@
 	</div>
 
     <div class="im-centered">
-    	<div class="row signup-bg">
+    	<div class="row">
+    		<form class="form" role="form">
         	<div class="col-sm-6 col-sm-offset-2">
-        		<form class="form" role="form">
         		<input type="email" class="form-control" id="inputEmail" placeholder="john.doe@email.com" />
         	</div>
-        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></form></div>          
+        	<div class="col-sm-2"><button type="button" id="button" class="btn btn-info">Submit</button></div>   
+        	</form>       
 		</div>
 	</div>   
 
