--- a/android/res/layout/listview_team_header.xml
+++ b/android/res/layout/listview_team_header.xml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="horizontal"
-    android:padding="10dp" >
-		
-	<TextView
-		android:id="@+id/name"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="horizontal"
+	android:padding="10dp"
+	android:background="#f3f3f3" >
+    	
+	<ImageView 
+		android:id="@+id/team_owner_picture"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textSize="26sp"
-		android:textStyle="bold"
-		android:textColor="#30acff" />
- 
-	<TextView
-	  	android:layout_width="wrap_content"
-	  	android:layout_height="wrap_content"
-	  	android:textSize="26sp"
-	  	android:textStyle="bold"
-	  	android:textColor="#30acff"
-	  	android:text="@string/possessive_form" />
-  
-  	<TextView 
-	    android:layout_width="wrap_content"
-	  	android:layout_height="wrap_content"
-	  	android:layout_marginLeft="4dp"
-	  	android:textSize="26sp"
-	  	android:textStyle="bold"
-	  	android:textColor="#30acff"
-	  	android:text="@string/team" />
-    
+		android:layout_marginRight="10dp" />
+        
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:orientation="vertical" >
+		  	
+		<LinearLayout
+			android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal" >
+		        
+	        <TextView
+				android:id="@+id/team_owner_name"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="26sp"
+				android:textStyle="bold"
+				android:textColor="#30acff" />
+			 
+			<TextView
+			  	android:layout_width="wrap_content"
+			  	android:layout_height="wrap_content"
+			  	android:textSize="26sp"
+			  	android:textStyle="bold"
+			  	android:textColor="#30acff"
+			  	android:text="@string/possessive_form" />
+		        
+	    </LinearLayout>
+		  	
+	    <TextView 
+		    android:layout_width="wrap_content"
+		  	android:layout_height="wrap_content"
+		  	android:textSize="26sp"
+		  	android:textStyle="bold"
+		  	android:textColor="#30acff"
+		  	android:text="@string/team" />
+		    
+	</LinearLayout>
+        
 </LinearLayout>
+
