--- a/android/res/layout/popwin_comment.xml
+++ b/android/res/layout/popwin_comment.xml
@@ -6,7 +6,7 @@
     android:padding="10dp"
     android:background="@drawable/popwin_comment_bg" >
     
-    <TextView
+    <com.walintukai.derpteam.CustomFontBoldTextView
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:layout_marginBottom="6dp"
