--- a/android/res/layout/popwin_report_bug.xml
+++ b/android/res/layout/popwin_report_bug.xml
@@ -7,7 +7,7 @@
     android:padding="10dp"
     android:background="@drawable/popwin_report_bug_bg" >
 
-    <TextView
+    <com.walintukai.derpteam.CustomFontBoldTextView
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:gravity="center"
