--- a/android/res/layout/popwin_report_bug.xml
+++ b/android/res/layout/popwin_report_bug.xml
@@ -16,7 +16,7 @@
     	android:textColor="#000"
     	android:text="@string/report_bug" />
     
-    <EditText 
+    <com.walintukai.derpteam.CustomFontEditText
         android:id="@+id/report_bug"
         android:layout_width="match_parent"
     	android:layout_height="0dp"
