--- a/android/res/layout/fragment_take_picture.xml
+++ b/android/res/layout/fragment_take_picture.xml
@@ -13,7 +13,7 @@
         android:padding="6dp"
         android:background="#30acff" >
         
-        <com.walintukai.derpteam.CustomFontEditText
+        <EditText
 			android:id="@+id/enter_title"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
 			android:singleLine="true"
 			android:textSize="16sp" />
         
-        <com.walintukai.derpteam.CustomFontEditText
+        <EditText
 			android:id="@+id/enter_caption"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
