--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -26,30 +26,33 @@
 		        android:contentDescription="@string/desc_fb_picture"
 		        android:src="@drawable/fb_pic_placeholder" />
 	        
-	        <com.walintukai.derpteam.CustomFontBoldTextView
+	        <TextView
 	            android:id="@+id/fb_name"
 	            android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_toRightOf="@id/fb_picture"
+	        	android:textStyle="bold"
 	        	android:textSize="18sp" />
 	        
-	        <com.walintukai.derpteam.CustomFontBoldTextView
+	        <TextView
 	            android:id="@+id/possessive_form"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_toRightOf="@id/fb_name"
 	        	android:textSize="18sp"
+	        	android:textStyle="bold"
 	        	android:text="@string/possessive_form" />
 	        
-	        <com.walintukai.derpteam.CustomFontBoldTextView
+	        <TextView
 	            android:id="@+id/title"
 	            android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
 	        	android:layout_marginLeft="4dp"
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_toRightOf="@id/possessive_form"
+	        	android:textStyle="bold"
 	        	android:textSize="18sp" />
 	        
 	    </RelativeLayout>
@@ -97,13 +100,14 @@
 			</LinearLayout>
 	    </FrameLayout>
 	    
-	    <com.walintukai.derpteam.CustomFontBoldTextView
+	    <TextView
 	        android:id="@+id/caption"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="4dp"
 	        android:layout_marginBottom="4dp"
 	        android:gravity="center"
+	        android:textStyle="bold"
 	        android:textAppearance="@style/caption" />
 	    
 	    <RelativeLayout
@@ -125,7 +129,7 @@
 			 		android:src="@drawable/arrow_up_small"
 			 		android:contentDescription="@string/desc_vote_up" />
 		        
-		        <com.walintukai.derpteam.CustomFontBoldTextView
+		        <TextView
 		            android:id="@+id/vote_up_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
@@ -142,7 +146,7 @@
 			 		android:src="@drawable/arrow_down_small"
 			 		android:contentDescription="@string/desc_vote_down" />
 		        
-		        <com.walintukai.derpteam.CustomFontBoldTextView
+		        <TextView
 		            android:id="@+id/vote_down_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
