--- a/android/res/layout/listview_row_friend.xml
+++ b/android/res/layout/listview_row_friend.xml
@@ -20,7 +20,7 @@
 		android:layout_height="50dp"
 		android:layout_marginRight="14dp" />
     
-    <com.walintukai.derpteam.CustomFontBoldTextView
+    <TextView
         android:id="@+id/friend_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
