--- a/android/res/layout/dialog_exit.xml
+++ b/android/res/layout/dialog_exit.xml
@@ -15,7 +15,7 @@
         android:textSize="20sp"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:text="@string/dialog_new_or_gallery" />
+        android:text="@string/dialog_exit" />
     
     <LinearLayout 
 	    android:layout_width="match_parent"
@@ -24,18 +24,18 @@
 	    android:orientation="horizontal" >
 	    
 	    <ImageView
-	        android:id="@+id/btn_select_gallery"
+	        android:id="@+id/btn_yes"
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:src="@drawable/btn_select_gallery" />
+	        android:src="@drawable/btn_yes" />
 	    
 	    <ImageView
-	        android:id="@+id/btn_new_picture"
+	        android:id="@+id/btn_no"
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:src="@drawable/btn_new_picture" />
+	        android:src="@drawable/btn_no" />
 
 	</LinearLayout>
     
