changed to custom font

--- a/android/res/layout/dialog_assign_team.xml
+++ b/android/res/layout/dialog_assign_team.xml
@@ -6,7 +6,7 @@
     android:padding="20dp"
     android:background="@drawable/pw_rounded_blue_bg" >
     
-  	<TextView
+  	<com.walintukai.derpteam.CustomFontBoldTextView
   	    android:id="@+id/derp_friend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
