--- a/android/res/layout/dialog_gallery_load.xml
+++ b/android/res/layout/dialog_gallery_load.xml
@@ -12,7 +12,7 @@
 	android:paddingLeft="20dp"
 	android:background="@drawable/pw_rounded_blue_bg" >
 	
-    <TextView
+    <com.walintukai.derpteam.CustomFontTextView
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center_vertical"
