--- a/android/res/layout/dialog_no_picture.xml
+++ b/android/res/layout/dialog_no_picture.xml
@@ -6,7 +6,7 @@
     android:padding="20dp"
     android:background="@drawable/pw_rounded_blue_bg" >
     
-  	<TextView
+  	<com.walintukai.derpteam.CustomFontBoldTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
