--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -21,7 +21,7 @@
 		        android:layout_width="40dp"
 		        android:layout_height="40dp"
 		        android:layout_alignParentLeft="true"
-		        android:layout_marginRight="8dp"
+		        android:layout_marginRight="10dp"
 		        android:scaleType="fitXY"
 		        android:contentDescription="@string/desc_fb_picture"
 		        android:src="@drawable/fb_pic_placeholder" />
@@ -38,14 +38,14 @@
 	        		android:layout_height="wrap_content"
 	        		android:orientation="horizontal" >
 	        	
-	        		<TextView
+	        		<com.walintukai.derpteam.CustomFontBoldTextView
 			            android:id="@+id/fb_name"
 			            android:layout_width="wrap_content"
 			        	android:layout_height="wrap_content"
 			        	android:textStyle="bold"
 			        	android:textSize="18sp" />
 			        
-			        <TextView
+			        <com.walintukai.derpteam.CustomFontBoldTextView
 			            android:id="@+id/possessive_form"
 			        	android:layout_width="wrap_content"
 			        	android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
 	        	
 	        	</LinearLayout>
 	        	
-	            <TextView
+	            <com.walintukai.derpteam.CustomFontBoldTextView
 		            android:id="@+id/title"
 		            android:layout_width="wrap_content"
 		        	android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
 			 		android:src="@drawable/arrow_up_small"
 			 		android:contentDescription="@string/desc_vote_up" />
 		        
-		        <TextView
+		        <com.walintukai.derpteam.CustomFontBoldTextView
 		            android:id="@+id/vote_up_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
 			 		android:src="@drawable/arrow_down_small"
 			 		android:contentDescription="@string/desc_vote_down" />
 		        
-		        <TextView
+		        <com.walintukai.derpteam.CustomFontBoldTextView
 		            android:id="@+id/vote_down_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
@@ -151,7 +151,7 @@
 			</LinearLayout>
 	    </FrameLayout>
 	    
-	    <TextView
+	    <com.walintukai.derpteam.CustomFontBoldTextView
 	        android:id="@+id/caption"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
