--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -16,26 +16,31 @@
 	        android:layout_width="40dp"
 	        android:layout_height="40dp"
 	        android:layout_alignParentLeft="true"
-	        android:layout_marginRight="8dp"
+	        android:layout_marginRight="10dp"
 	        android:scaleType="fitXY"
 	        android:contentDescription="@string/desc_fb_picture"
 	        android:src="@drawable/fb_pic_placeholder" />
         
-        <TextView
-            android:id="@+id/poster_name"
-            android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_alignParentBottom="true"
-        	android:layout_toRightOf="@id/poster_fb_picture"
-        	android:textSize="18sp"
-        	android:textStyle="bold" />
-        
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/poster_fb_picture"
-            android:textSize="14sp"
-            android:text="@string/derped_by" />
+            android:orientation="vertical" >
+            
+            <com.walintukai.derpteam.CustomFontTextView
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textSize="14sp"
+	            android:text="@string/derped_by" />
+	        
+	        <com.walintukai.derpteam.CustomFontBoldTextView
+	            android:id="@+id/poster_name"
+	            android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"
+	        	android:textSize="18sp"
+	        	android:textStyle="bold" />
+            
+        </LinearLayout>
         
         <LinearLayout
 	        android:layout_width="wrap_content"
@@ -51,7 +56,7 @@
 		 		android:src="@drawable/arrow_up_small"
 		 		android:contentDescription="@string/desc_vote_up" />
 	        
-	        <TextView
+	        <com.walintukai.derpteam.CustomFontBoldTextView
 	            android:id="@+id/vote_up_count"
 	            android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
@@ -68,7 +73,7 @@
 		 		android:src="@drawable/arrow_down_small"
 		 		android:contentDescription="@string/desc_vote_down" />
 	        
-	        <TextView
+	        <com.walintukai.derpteam.CustomFontBoldTextView
 	            android:id="@+id/vote_down_count"
 	            android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
@@ -102,7 +107,7 @@
 		        android:orientation="horizontal"
 		        android:background="#b3808080" >
 	        
-	        	<TextView
+	        	<com.walintukai.derpteam.CustomFontBoldTextView
 					android:id="@+id/target_name"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -111,7 +116,7 @@
 					android:textStyle="bold"
 					android:textColor="#fff" />
 			 
-				<TextView
+				<com.walintukai.derpteam.CustomFontBoldTextView
 				  	android:layout_width="wrap_content"
 				  	android:layout_height="wrap_content"
 				  	android:textSize="22sp"
@@ -119,7 +124,7 @@
 				  	android:textColor="#fff"
 				  	android:text="@string/possessive_form" />
 	        	
-	            <TextView
+	            <com.walintukai.derpteam.CustomFontBoldTextView
 		            android:id="@+id/title"
 		            android:layout_width="match_parent"
 		        	android:layout_height="wrap_content"
@@ -131,7 +136,7 @@
             </LinearLayout>
 	    </FrameLayout>
     
-    <TextView
+    <com.walintukai.derpteam.CustomFontBoldTextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
