--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -1,73 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff" >
     
-    <FrameLayout
-        android:id="@+id/picture_frame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true" >
-        
-        <ImageView 
-	        android:id="@+id/rate_picture"
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+	    
+	    <FrameLayout
 	        android:layout_width="match_parent"
-	        android:layout_height="360dp"
-	        android:scaleType="fitXY"
-	        android:contentDescription="@string/desc_rate_image" />
-        
-        <RelativeLayout
-            android:layout_width="match_parent"
-        	android:layout_height="wrap_content"
-        	android:layout_gravity="bottom"
-        	android:paddingTop="4dp"
-        	android:paddingBottom="4dp"
-        	android:orientation="horizontal"
-        	android:background="@drawable/transparent_gradient_footer" >
-            
-            <ImageView
-                android:id="@+id/btn_vote_up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"
-                android:layout_alignParentLeft="true"
-                android:visibility="gone"
-                android:src="@drawable/arrow_up"
-                android:contentDescription="@string/desc_vote_up" />
-            
-            <ImageView
-                android:id="@+id/btn_vote_down"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="80dp"
-                android:layout_alignParentRight="true"
-                android:visibility="gone"
-                android:src="@drawable/arrow_down"
-                android:contentDescription="@string/desc_vote_down" />
-            
-			<ImageView
-                android:id="@+id/btn_next_pic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:visibility="gone"
-                android:src="@drawable/arrow_next"
-                android:contentDescription="@string/desc_next_picture" />
-        	
-		</RelativeLayout>
-
-    </FrameLayout>
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="20dp" >
+	        
+	        <com.walintukai.derpteam.AspectRatioImageView
+		        android:id="@+id/rate_picture"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:contentDescription="@string/desc_rate_image" />
+	        
+	        <RelativeLayout
+	            android:layout_width="match_parent"
+	        	android:layout_height="wrap_content"
+	        	android:layout_gravity="bottom"
+	        	android:paddingTop="4dp"
+	        	android:paddingBottom="4dp"
+	        	android:orientation="horizontal"
+	        	android:background="@drawable/transparent_gradient_footer" >
+	            
+	            <ImageView
+	                android:id="@+id/btn_vote_up"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="80dp"
+	                android:layout_alignParentLeft="true"
+	                android:visibility="gone"
+	                android:src="@drawable/arrow_up"
+	                android:contentDescription="@string/desc_vote_up" />
+	            
+	            <ImageView
+	                android:id="@+id/btn_vote_down"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginRight="80dp"
+	                android:layout_alignParentRight="true"
+	                android:visibility="gone"
+	                android:src="@drawable/arrow_down"
+	                android:contentDescription="@string/desc_vote_down" />
+	            
+				<ImageView
+	                android:id="@+id/btn_next_pic"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_centerHorizontal="true"
+	                android:visibility="gone"
+	                android:src="@drawable/arrow_next"
+	                android:contentDescription="@string/desc_next_picture" />
+	        	
+			</RelativeLayout>
+	
+	    </FrameLayout>
+	    
+	    <com.walintukai.derpteam.CustomFontBoldTextView
+	        android:id="@+id/caption"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="4dp"
+	        android:gravity="center_horizontal"
+	        android:textAppearance="@style/caption" />
+	
+	</LinearLayout>
     
-    <com.walintukai.derpteam.CustomFontBoldTextView
-        android:id="@+id/caption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/picture_frame"
-        android:layout_marginTop="4dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/caption" />
-
-</RelativeLayout>
+</ScrollView>
