--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -85,56 +85,55 @@
 	    </LinearLayout>
         
     </RelativeLayout>
-    
+	
     <FrameLayout
-	        android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
+           
+        <com.walintukai.derpteam.AspectRatioImageView
+			android:id="@+id/member"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:contentDescription="@string/desc_derp_picture" />
+        
+        <LinearLayout
+			android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="center_horizontal" >
-	        
-	        <ImageView 
-				android:id="@+id/member"
-				android:layout_width="match_parent"
-				android:layout_height="360dp"
-				android:scaleType="fitXY"
-				android:contentDescription="@string/desc_derp_picture" />
-	        
-	        <LinearLayout
+	        android:layout_gravity="top"
+	        android:paddingLeft="10dp"
+	        android:orientation="horizontal"
+	        android:background="#b3808080" >
+	       
+	       	<com.walintukai.derpteam.CustomFontBoldTextView
+				android:id="@+id/target_name"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="22sp"
+				android:textStyle="bold"
+				android:textColor="#fff" />
+		 
+			<com.walintukai.derpteam.CustomFontBoldTextView
+			  	android:layout_width="wrap_content"
+			  	android:layout_height="wrap_content"
+			  	android:textSize="22sp"
+			  	android:textStyle="bold"
+			  	android:textColor="#fff"
+			  	android:text="@string/possessive_form" />
+	       	
+			<com.walintukai.derpteam.CustomFontBoldTextView
+				android:id="@+id/title"
 	            android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="top"
-		        android:paddingTop="2dp"
-		        android:paddingBottom="2dp"
-		        android:orientation="horizontal"
-		        android:background="#b3808080" >
-	        
-	        	<com.walintukai.derpteam.CustomFontBoldTextView
-					android:id="@+id/target_name"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="10dp"
-					android:textSize="22sp"
-					android:textStyle="bold"
-					android:textColor="#fff" />
-			 
-				<com.walintukai.derpteam.CustomFontBoldTextView
-				  	android:layout_width="wrap_content"
-				  	android:layout_height="wrap_content"
-				  	android:textSize="22sp"
-				  	android:textStyle="bold"
-				  	android:textColor="#fff"
-				  	android:text="@string/possessive_form" />
-	        	
-	            <com.walintukai.derpteam.CustomFontBoldTextView
-		            android:id="@+id/title"
-		            android:layout_width="match_parent"
-		        	android:layout_height="wrap_content"
-		        	android:layout_marginLeft="5dp"
-		        	android:textSize="22sp"
-		        	android:textStyle="bold"
-		        	android:textColor="#fff" />
-	            
-            </LinearLayout>
-	    </FrameLayout>
+	        	android:layout_height="wrap_content"
+	        	android:layout_marginLeft="5dp"
+	        	android:textSize="22sp"
+	        	android:textStyle="bold"
+	        	android:textColor="#fff" />
+           
+		</LinearLayout>
+        
+    </FrameLayout>
     
     <com.walintukai.derpteam.CustomFontBoldTextView
         android:id="@+id/caption"
