--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -140,13 +140,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:textAppearance="@style/caption" />
 
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" >
@@ -162,6 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingTop="4dp"
             android:paddingLeft="10dp" />
         
     </LinearLayout>
